# WebServerTest

./: main.py  pyproject.toml  requirements.txt
firebase/: db.py
static/css/: sticky-footer.css
static/js/: ingame.js  pregame.js  stopwatch.js
templates/: game_template.html  index_template.html  main.html  startgame.html  wonnered.html  wonners.html
wiki/: wikitools.py
